# developer-joi-delivery-python

./: .gitignore  README.md  app.py  pyproject.toml  shell.nix
src/: __init__.py  dependencies.py  main.py  router.py
src/controller/: __init__.py  cart_controller.py  inventory_controller.py  models.py
src/domain/: __init__.py  cart.py  food_product.py  grocery_product.py  outlet.py  product.py  restaurant.py  store.py  user.py
src/generator/: app_initializer.py
src/joi_delivery/: dependencies.py  main.py  router.py
src/joi_delivery/controller/: __init__.py  cart_controller.py  inventory_controller.py  models.py
src/joi_delivery/domain/: __init__.py  cart.py  food_product.py  grocery_product.py  grocery_store.py  outlet.py  product.py  restaurant.py  user.py
src/joi_delivery/generator/: __init__.py  app_initializer.py
src/joi_delivery/service/: __init__.py  cart_service.py  product_service.py  user_service.py
src/joi_delivery/system/: __init__.py  (+1 more)
src/repository/: __init__.py  cart_repository.py  product_repository.py  store_repository.py  user_repository.py
src/service/: __init__.py  cart_service.py  inventory_service.py  product_service.py  user_service.py
src/system/: __init__.py  routes.py
tests/: __init__.py
tests/controller/: __init__.py  test_cart_controller.py  test_inventory_controller.py
tests/domain/: __init__.py  test_cart.py  test_product.py
tests/generator/: __init__.py  test_app_initializer.py
tests/repository/: __init__.py  test_cart_repository.py  test_user_repository.py
tests/service/: __init__.py  test_cart_service.py
