[tool.poetry]
name = "joi-delivery"
version = "0.1.0"
description = "A thoughtful, technology-first food and grocery delivery platform"
authors = ["Aida Sabaghmoghadam <aida.sabaghmoghadam@thoughtworks.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
fastapi = "^0.110.1"
httpx = "^0.27.0"
loguru = "^0.7.2"
python = "^3.12"
uvicorn = "^0.29.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
black = "^24.3.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ["I00", "E", "F", "W"]
lint.ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["INP001"]


[tool.black]
line-length = 120
target-version = ['py39']
